# cookiecutter-fastapi

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
{{cookiecutter.project_slug}}/src/: main.py
